 <resources>
    <string name="app_name">mada</string>

    <string name="start_activity">Start an Activity</string>
    <string name="open_browser">Open Web Browser</string>
    <string name="start_2activity">Start an ActivityT</string>
    <string name="open_camera">Open Camera</string>
    <string name="fragment_detal_action_delete">Delete</string>
    <string name="fragment_detal_action_update" >Update</string>
    <string name="fragment_master_action_create" >Create</string>
    <string name="activity_first_toolbar_title" >Toolbar title</string>
    <string name="drawer_home" >Jela</string>
    <string name="drawer_settings" >Podesavanja</string>
    <string name="drawer_settings_long" />
    <string name="drawer_home_long" />


    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="pref_sync" />
    <string name="pref_syncConnectionType" />
    <string name="pref_sync_list" />
    <string name="pref_sync_summ" />
    <string name="pref_sync_title" />
     <string name="fragment_detal_action_add" />
     <string name="fragment_detal_action_refresh" />
 </resources>
