<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:title="@string/fragment_detal_action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_create"
        android:title="@string/fragment_master_action_create"
        android:icon="@drawable/ic_action_create"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_update"
        android:title="@string/fragment_detal_action_update"
        android:icon="@drawable/ic_action_update"
        app:showAsAction="always"  />


    <item
        android:id="@+id/action_refresh"
        android:title="@string/fragment_detal_action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always" />

    <item android:id="@+id/action_add"
        android:title="@string/fragment_detal_action_add"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always" />

</menu>
