<?xml version="1.0" encoding="utf-8"?>

<!-- PreferenceScreen represents a top-level Preference that is the root of a Preference hierarchy. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- PreferenceCategory is used to group Preference objects and provide a disabled title above the group. -->
    <PreferenceCategory 
        android:title="Auto data sync" 
        android:key="sync_settings">

        <!--  CheckBoxPreference will store a boolean into the SharedPreferences. -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:title="@string/pref_sync_title" />

        <!-- ListPreference will store a string into the SharedPreferences (this string will be the value from the array).-->
        <ListPreference
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_sync_list"
            android:title="@string/pref_syncConnectionType" 
            android:summary="%s"
            android:defaultValue="1"/>
        
    </PreferenceCategory>

</PreferenceScreen>